--- a/index.html
+++ b/index.html
@@ -28,10 +28,21 @@
         <p>Somos especialistas na administração e intermediação de imóveis.</p>
     </section>
 
+    <section> <!--APAGAR-->
+        APAGAR (☞ﾟヮﾟ)☞
+        <div><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis vel pariatur explicabo accusamus vero. Eveniet quod veritatis commodi sapiente esse. Veniam eligendi recusandae dolore voluptas repellat. Minus laborum sunt a. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur tempora accusantium odit distinctio. Ab sapiente fugit maxime hic nemo ea nobis corporis repellat commodi adipisci, minima at ipsa dignissimos consectetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus eius quasi similique dolorem quam nostrum aperiam aliquid, temporibus iusto soluta! Fugiat corrupti nesciunt quod quos quo aliquid dicta unde quibusdam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod optio recusandae ipsum nihil ducimus quasi nisi quibusdam? Placeat et provident illum. Totam provident error tempore quaerat cum, ducimus modi eveniet!</p></div>
+
+        <div><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis vel pariatur explicabo accusamus vero. Eveniet quod veritatis commodi sapiente esse. Veniam eligendi recusandae dolore voluptas repellat. Minus laborum sunt a. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur tempora accusantium odit distinctio. Ab sapiente fugit maxime hic nemo ea nobis corporis repellat commodi adipisci, minima at ipsa dignissimos consectetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus eius quasi similique dolorem quam nostrum aperiam aliquid, temporibus iusto soluta! Fugiat corrupti nesciunt quod quos quo aliquid dicta unde quibusdam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod optio recusandae ipsum nihil ducimus quasi nisi quibusdam? Placeat et provident illum. Totam provident error tempore quaerat cum, ducimus modi eveniet!</p></div>
+
+        <div><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis vel pariatur explicabo accusamus vero. Eveniet quod veritatis commodi sapiente esse. Veniam eligendi recusandae dolore voluptas repellat. Minus laborum sunt a. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur tempora accusantium odit distinctio. Ab sapiente fugit maxime hic nemo ea nobis corporis repellat commodi adipisci, minima at ipsa dignissimos consectetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus eius quasi similique dolorem quam nostrum aperiam aliquid, temporibus iusto soluta! Fugiat corrupti nesciunt quod quos quo aliquid dicta unde quibusdam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod optio recusandae ipsum nihil ducimus quasi nisi quibusdam? Placeat et provident illum. Totam provident error tempore quaerat cum, ducimus modi eveniet!</p></div>
+
+        <div><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis vel pariatur explicabo accusamus vero. Eveniet quod veritatis commodi sapiente esse. Veniam eligendi recusandae dolore voluptas repellat. Minus laborum sunt a. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur tempora accusantium odit distinctio. Ab sapiente fugit maxime hic nemo ea nobis corporis repellat commodi adipisci, minima at ipsa dignissimos consectetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus eius quasi similique dolorem quam nostrum aperiam aliquid, temporibus iusto soluta! Fugiat corrupti nesciunt quod quos quo aliquid dicta unde quibusdam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod optio recusandae ipsum nihil ducimus quasi nisi quibusdam? Placeat et provident illum. Totam provident error tempore quaerat cum, ducimus modi eveniet!</p></div>
+    </section>
+
     <!-- Rodapé -->
     <footer>
         <p>&copy; 2025 Nova Terra Administradora de Imóveis LTDA</p>
     </footer>
-
+    <script src="js/script.js"></script>
 </body>
 </html>
