--- a/properties.html
+++ b/properties.html
@@ -22,14 +22,33 @@
     </header>
 
     <section>
-        <h2>Imóveis Disponíveis</h2>
-        <p>Aqui estão alguns dos imóveis disponíveis para venda e locação:</p>
-        <ul>
-            <li>Apartamento de 3 quartos - R$ 450.000</li>
-            <li>Casa térrea com jardim - R$ 600.000</li>
-            <li>Sala comercial no centro - R$ 1.500/mês</li>
-        </ul>
+        <h2>Nossos Imóveis</h2>
+        <p>Confira os imóveis disponíveis para venda e locação.</p>
+
+        <div class="gallery">
+            <div class="property">
+                <img src="assets/img/imovel1.jpg" alt="Apartamento Luxo">
+                <h3>Apartamento Luxo</h3>
+                <p>3 quartos, 2 banheiros, 1 suíte, varanda gourmet.</p>
+                <span class="price">R$ 950.000</span>
+            </div>
+
+            <div class="property">
+                <img src="assets/img/imovel2.jpg" alt="Casa Moderna">
+                <h3>Casa Moderna</h3>
+                <p>4 quartos, piscina, área de lazer completa.</p>
+                <span class="price">R$ 1.200.000</span>
+            </div>
+
+            <div class="property">
+                <img src="assets/img/imovel3.jpg" alt="Sala Comercial">
+                <h3>Sala Comercial</h3>
+                <p>Localizada no centro, ideal para escritórios.</p>
+                <span class="price">R$ 350.000</span>
+            </div>
+        </div>
     </section>
+
 
     <footer>
         <p>&copy; 2025 Nova Terra Administradora de Imóveis LTDA</p>
