--- a/pages/imovel2.html
+++ b/pages/imovel2.html
@@ -30,9 +30,9 @@
             <!--substituir a imagem única pelo carrossel de imagens-->
             <div class="swiper-container">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="../assets/img/carrossel1.jpg" alt="Foto 1"></div>
-                    <div class="swiper-slide"><img src="../assets/img/carrossel2.jpg" alt="Foto 2"></div>
-                    <div class="swiper-slide"><img src="../assets/img/carrossel3.jpg" alt="Foto 3"></div>
+                    <div class="swiper-slide"><img src="../assets/img/carrossel2-1.jpg" alt="Foto 1"></div>
+                    <div class="swiper-slide"><img src="../assets/img/carrossel2-2.jpg" alt="Foto 2"></div>
+                    <div class="swiper-slide"><img src="../assets/img/carrossel2-3.jpg" alt="Foto 3"></div>
                 </div>
                 <div class="swiper-pagination"></div>
                 <div class="swiper-button-next"></div>
@@ -55,5 +55,6 @@
     <script src="../js/script.js"></script>
     <!-- Swiper.js JavaScript para carrocel-->
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+    <script src="../js/carousel.js"></script>
 </body>
 </html>
