--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
             <textarea id="message" name="message" required></textarea>
         
             <input type="hidden" name="_captcha" value="false">
-            <input type="hidden" name="_next" value="thanks.html">
+            <input type="hidden" name="_next" value="/nova-terra/thanks.html">
         
             <button type="submit">Enviar</button>
         </form>        
