--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato - Nova Terra</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/estilo_mapa_contato.css">
 </head>
 <body>
 
@@ -44,7 +45,17 @@
         <p id="success-message" style="color: green; display: none;">Mensagem enviada com sucesso!</p>
     </section>
 
-
+    <!-- Seção do mapa -->
+    <section class="map-container">
+    <!-- Título da seção -->
+        <h2>Nossa Localização</h2>
+    <!-- Código do Google Maps incorporado -->
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3831.1961641333914!2d-44.42835230000001!3d-16.210351900000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7551f6ede9dd2eb%3A0x59f084f884888635!2sNova%20Terra%20Administradora%20de%20Im%C3%B3veis%20Ltda!5e0!3m2!1spt-BR!2sbr!4v1740268167014!5m2!1spt-BR!2sbr"
+            width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy">
+        </iframe>
+    </section>
+    
     <footer>
         <p>&copy; 2025 Nova Terra Administradora de Imóveis LTDA</p>
     </footer>
