--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a href="services.html">Serviços</a></li>
                 <li><a href="properties.html">Imóveis</a></li>
                 <li><a href="contact.html">Contato</a></li>
+                <li><a href="blog.html">Blog</a></li>
             </ul>
         </nav>
     </header>
