--- a/imoveis.html
+++ b/imoveis.html
@@ -6,11 +6,12 @@
     <title>Buscar Imóveis - Nova Terra</title>
     <link rel="stylesheet" href="css/estilo_busca_imovel.css"> <!-- Importando o arquivo CSS -->
     <link rel="stylesheet" href="css/style.css"> <!-- Importando o arquivo CSS -->
-    <script src="js/script.js" defer></script> <!-- Importando o JavaScript -->
+    <script src="js/script_busca_imoveis.js" defer></script> <!-- Importando o JavaScript -->
 </head>
 <body>
 
     <!-- Cabeçalho do site -->
+    <h1 style="background-color: black; color: brown;">📍 ATENÇÃO SITE EM CONSTRUÇÃO!</h1> <!-- APAGAR DEPOIS DE CONCLUÍDO-->
     <header>
         <h1>Buscar Imóveis</h1>
         <nav>
