--- a/thanks.html
+++ b/thanks.html
@@ -1,2 +1,4 @@
+<h1 style="background-color: black; color: brown;">📍 ATENÇÃO SITE EM CONSTRUÇÃO!</h1> <!-- APAGAR DEPOIS DE CONCLUÍDO-->
+
 <h2>Obrigado por entrar em contato! Retornaremos em breve.</h2>
 <a href="index.html">Voltar para o início</a>
