--- a/pages/imovel2.html
+++ b/pages/imovel2.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-
+    <h1 style="background-color: black; color: brown;">📍 ATENÇÃO SITE EM CONSTRUÇÃO!</h1> <!-- APAGAR DEPOIS DE CONCLUÍDO-->
     <header>
+        
         <h1>Nova Terra Administradora de Imóveis</h1>
         <nav>
             <ul>
