--- a/properties.html
+++ b/properties.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+    <h1 style="background-color: black; color: brown;">📍 ATENÇÃO SITE EM CONSTRUÇÃO!</h1> <!-- APAGAR DEPOIS DE CONCLUÍDO-->
     <header>
         <h1>Nova Terra Administradora de Imóveis</h1>
         <nav>
@@ -27,11 +27,11 @@
 
         <div class="gallery">
             <div class="property">
-                <a href="pages/imovel1.html">
+                <a href="http://tomcat.aws.sistemasivi.com.br:8880/sivi_mapas_incorporacaosolar/principal.jsp?id=5bf214661679b78e08708d3e2054cd7c&funcao=visualizarMapas&loteamento=1" target="_blank">
                     <img src="assets/img/imovel1.jpg" alt="Apartamento Luxo">
-                    <h3>Apartamento Luxo</h3>
-                    <p>3 quartos, 2 banheiros, 1 suíte, varanda gourmet.</p>
-                    <span class="price">R$ 950.000</span>
+                    <h3>Loteamento Nova Brasília</h3>
+                    <p>Lotes exemplos, apartir de</p>
+                    <span class="price">R$ 90.000,00</span>
                 </a>
             </div>
             
