--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="css/style.css"> <!-- Link para o arquivo de estilos -->
 </head>
 <body>
-    <h1 style="background-color: black; color: brown;">📍 ATENÇÃO SITE EM CONSTRUÇÃO!</h1> <!-- APAGAR DEPOIS DE PRNTO-->
+    <h1 class="emConstrucao">📍 ATENÇÃO SITE EM CONSTRUÇÃO!</h1> <!-- APAGAR DEPOIS DE PRNTO-->
     <!-- Cabeçalho do site -->
     <header>
         <h1>Nova Terra Administradora de Imóveis</h1>
