--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css"> <!-- Importando o arquivo CSS -->
 </head>
 <body>
-    <h1 style="background-color: black; color: brown;">📍 ATENÇÃO BLOG EM CONSTRUÇÃO!</h1> <!-- APAGAR DEPOIS DE CONCLUÍDO-->
+    <h1 class="emConstrucao">📍 ATENÇÃO BLOG EM CONSTRUÇÃO!</h1> <!-- APAGAR DEPOIS DE CONCLUÍDO-->
     <!-- Cabeçalho do site -->
     <header>
         <h1>Blog Imobiliário</h1>
