--- a/imoveis.html
+++ b/imoveis.html
@@ -11,7 +11,7 @@
 <body>
 
     <!-- Cabeçalho do site -->
-    <h1 class="emConstrucao">📍 ATENÇÃO SITE EM CONSTRUÇÃO!</h1> <!-- APAGAR DEPOIS DE CONCLUÍDO-->
+    <h1 class="emConstrucao">📍 ATENÇÃO! SITE EM CONSTRUÇÃO.</h1> <!-- APAGAR DEPOIS DE CONCLUÍDO-->
     <header>
         <h1>Buscar Imóveis</h1>
         <nav>
