--- a/pages/imovel3.html
+++ b/pages/imovel3.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-    <h1 class="emConstrucao">📍 ATENÇÃO SITE EM CONSTRUÇÃO!</h1> <!-- APAGAR DEPOIS DE CONCLUÍDO-->
+    <h1 class="emConstrucao">📍 ATENÇÃO! SITE EM CONSTRUÇÃO.</h1> <!-- APAGAR DEPOIS DE CONCLUÍDO-->
     <header>
         <h1>Nova Terra Administradora de Imóveis</h1>
         <nav>
