--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
     <h1 class="emConstrucao">📍 ATENÇÃO! SITE EM CONSTRUÇÃO.</h1> <!-- APAGAR DEPOIS DE PRNTO-->
     <!-- Cabeçalho do site -->
     <header>
-        <h1>Nova Terra Administradora de Imóveis</h1>
-        <nav>
+        <div class="logo">
+            <h1>Nova Terra Imóveis</h1>
+        </div>
+        <button class="menu-toggle" id="menu-toggle">&#9776;</button> <!-- Ícone do menu -->
+        <nav id="menu">
             <ul>
                 <li><a href="index.html">Início</a></li>
-                <li><a href="about.html">Sobre Nós</a></li>
-                <li><a href="services.html">Serviços</a></li>
-                <li><a href="properties.html">Imóveis</a></li>
-                <li><a href="contact.html">Contato</a></li>
+                <li><a href="imoveis.html">Imóveis</a></li>
                 <li><a href="blog.html">Blog</a></li>
+                <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
-
     <!-- Seção principal -->
     <section>
         <h2>Bem-vindo à Nova Terra</h2>
@@ -75,6 +75,6 @@
     </footer>
     
     <script src="js/script.js"></script>
-
+    <script src="js/menu.js"></script>
 </body>
 </html>
