--- a/blog.html
+++ b/blog.html
@@ -15,9 +15,11 @@
         <nav>
             <ul>
                 <li><a href="index.html">Início</a></li>
+                <li><a href="about.html">Sobre nós</a></li>
                 <li><a href="imoveis.html">Imóveis</a></li>
+                <li><a href="contato.html">Contato</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact.html">Contato</a></li>
+                <li><a href="busca_imoveis.html">EDITAR</a></li>
             </ul>
         </nav>
     </header>
