--- a/index.html
+++ b/index.html
@@ -32,15 +32,17 @@
     <!-- Cabeçalho do site -->
     <header>
         <div class="logo">
-            <h1>Nova Terra Imóveis</h1>
+            <h1>Nova Terra Administradora de Imóveis Ltda</h1>
         </div>
         <button class="menu-toggle" id="menu-toggle">&#9776;</button> <!-- Ícone do menu -->
         <nav id="menu">
             <ul>
                 <li><a href="index.html">Início</a></li>
+                <li><a href="about.html">Sobre nós</a></li>
                 <li><a href="imoveis.html">Imóveis</a></li>
-                <li><a href="blog.html">Blog</a></li>
                 <li><a href="contato.html">Contato</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="busca_imoveis.html">EDITAR</a></li>
             </ul>
         </nav>
     </header>
