--- a/contato.html
+++ b/contato.html
@@ -16,8 +16,8 @@
                 <li><a href="index.html">Início</a></li>
                 <li><a href="about.html">Sobre Nós</a></li>
                 <li><a href="services.html">Serviços</a></li>
-                <li><a href="properties.html">Imóveis</a></li>
-                <li><a href="contact.html">Contato</a></li>
+                <li><a href="busca_imoveis.html">Imóveis</a></li>
+                <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
