--- a/pages/imovel1.html
+++ b/pages/imovel1.html
@@ -18,7 +18,7 @@
                 <li><a href="../index.html">Início</a></li>
                 <li><a href="../about.html">Sobre</a></li>
                 <li><a href="../properties.html">Imóveis</a></li>
-                <li><a href="../contact.html">Contato</a></li>
+                <li><a href="../contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
