Atualizei HTML e CSS
Atualização geral.

--- a/about.html
+++ b/about.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Nós - Nova Terra</title>
     <link rel="stylesheet" href="css/style.css">
+    
 </head>
 <body>
-    <h1 class="emConstrucao">📍 ATENÇÃO! SITE EM CONSTRUÇÃO.</h1> <!-- APAGAR DEPOIS DE CONCLUÍDO-->
+    <h1 class="emConstrucao">📍 ATENÇÃO! SITE EM DESENVOLVIMENTO.</h1> <!-- APAGAR DEPOIS DE CONCLUÍDO-->
     <header>
-        <h1>Nova Terra Administradora de Imóveis</h1>
-        <nav>
+        <div class="logo">
+            <h1>Nova Terra Administradora de Imóveis Ltda</h1>
+        </div>
+        <button class="menu-toggle" id="menu-toggle">&#9776;</button> <!-- Ícone do menu -->
+        <nav id="menu">
             <ul>
                 <li><a href="index.html">Início</a></li>
                 <li><a href="about.html">Sobre nós</a></li>
@@ -22,12 +26,45 @@
         </nav>
     </header>
 
+    <section class="sessao_inicial">
+        <h1>Sua Segurança e Tranquilidade em Gestão Imobiliária</h1>
+    </section>
+
     <section>
-        <h2>Sobre Nós</h2>
-        <p>A Nova Terra Administradora de Imóveis é especializada em gestão imobiliária, oferecendo segurança e tranquilidade aos nossos clientes.</p>
-        <p>Missão: Proporcionar a melhor experiência em administração de imóveis.</p>
-        <p>Visão: Ser referência no mercado imobiliário.</p>
-        <p>Valores: Transparência, Comprometimento e Inovação.</p>
+        <p>A Nova Terra Administradora de Imóveis é uma empresa especializada em gestão imobiliária, dedicada a proporcionar segurança e tranquilidade aos nossos clientes. Com uma equipe experiente e qualificada, oferecemos soluções completas e personalizadas para proprietários e inquilinos.</p>
+
+        <h2>Nossa Missão:</h2>
+
+        <p>Proporcionar a melhor experiência em administração de imóveis, garantindo a satisfação e a confiança de nossos clientes.</p>
+
+        <h2>Nossa Visão:</h2>
+
+        Ser referência no mercado imobiliário, reconhecida pela excelência em nossos serviços e pela inovação em nossas soluções.
+
+        <h2>Nossos Valores:</h2>
+
+        Transparência: Mantemos uma comunicação clara e honesta com nossos clientes, garantindo a confiança e a segurança em nossos serviços.
+        Comprometimento: Dedicamo-nos a oferecer o melhor atendimento e a buscar soluções eficientes para as necessidades de nossos clientes.
+        Inovação: Buscamos constantemente novas tecnologias e soluções para aprimorar nossos serviços e oferecer a melhor experiência aos nossos clientes.
+        Nossos Serviços:
+
+        <h2>Administração de imóveis residenciais e comerciais</h2>
+        <p>
+            Gestão de contratos de locação
+            Vistoria e manutenção de imóveis
+            Assessoria jurídica imobiliária
+            Marketing e divulgação de imóveis
+            Por que escolher a Nova Terra Administradora de Imóveis?
+        </p>
+
+        <h2>Experiência e conhecimento no mercado imobiliário</h2>
+        <p>
+            Equipe qualificada e comprometida
+            Atendimento personalizado e eficiente
+            Soluções completas e inovadoras
+            Transparência e segurança em todos os processos
+            Entre em contato conosco e descubra como podemos ajudá-lo a administrar seu imóvel com segurança e tranquilidade.
+        </p>
     </section>
 
     <footer>
@@ -35,6 +72,7 @@
     </footer>
 
     <script src="js/script.js"></script>
+    <script src="js/menu.js"></script>
 
 </body>
 </html>
