--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="sessao_inicial">
         <section class="blog-lista">
             <article>
                 <h2><a href="post_do_blog/como-comprar-imovel.html">Como comprar um imóvel sem dores de cabeça?</a></h2>
