--- a/busca_imoveis.html
+++ b/busca_imoveis.html
@@ -25,7 +25,7 @@
     </header>
 
     <!-- Seção de busca -->
-    <section class="search-container">
+    <section class="search-container sessao_inicial">
         <h2>Encontre seu Imóvel</h2>
         <form id="search-form">
             <!-- Filtro por tipo de imóvel -->
