--- a/imoveis.html
+++ b/imoveis.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1 class="emConstrucao">📍 ATENÇÃO! SITE EM CONSTRUÇÃO.</h1> <!-- APAGAR DEPOIS DE CONCLUÍDO-->
+    <h1 class="emConstrucao">📍 ATENÇÃO! SITE EM DESENVOLVIMENTO.</h1> <!-- APAGAR DEPOIS DE CONCLUÍDO-->
     <header>
-        <h1>Loteamento e Chacreamento</h1>
-        <nav>
+        <div class="logo">
+            <h1>Nova Terra Administradora de Imóveis Ltda</h1>
+        </div>
+        <button class="menu-toggle" id="menu-toggle">&#9776;</button> <!-- Ícone do menu -->
+        <nav id="menu">
             <ul>
                 <li><a href="index.html">Início</a></li>
                 <li><a href="about.html">Sobre nós</a></li>
@@ -22,7 +25,7 @@
         </nav>
     </header>
 
-    <section>
+    <section class="sessao_inicial">
         <h2>Nossos Imóveis</h2>
         <p>Confira os imóveis disponíveis para venda e locação.</p>
 
@@ -51,6 +54,15 @@
                     <h3>Sala Comercial</h3>
                     <p>Localizada no centro, ideal para escritórios.</p>
                     <span class="price">R$ 350.000</span>
+                </a>
+            </div>
+
+            <div class="property">
+                <a href="http://tomcat.aws.sistemasivi.com.br:8880/sivi_mapas_incorporacaosolar/principal.jsp?id=3af035e6f29d0b9b6f23f88334fcb786&funcao=visualizarMapas&loteamento=3" target="_blank">
+                    <img src="assets/img/chacreamento_nova_brasilia_2.jpg" alt="Chacreamento Nova Brasília 1">
+                    <h3>Chacreamento Nova Brasília 1</h3>
+                    <p>Chácaras exemplos, apartir de</p>
+                    <span class="price">R$ 50.000,00</span>
                 </a>
             </div>
             
