--- a/services.html
+++ b/services.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
 
-    <section>
+    <section class="sessao_inicial">
         <h2>Nossos Serviços</h2>
         <ul>
             <li>Administração de imóveis</li>
