--- a/contato.html
+++ b/contato.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
 
-    <section>
+    <section class="sessao_inicial">
         <h2>Entre em Contato</h2>
         <p>Preencha o formulário abaixo e entraremos em contato com você o mais breve possível.</p>
 
