--- a/index.html
+++ b/index.html
@@ -36,14 +36,32 @@
             </div>
             <button class="menu-toggle" id="menu-toggle">&#9776;</button> <!-- Ícone do menu -->
             <nav id="menu">
-                <ul>
+                <ul class="esconder_link_menu">
                     <li><a href="index.html">Início</a></li>
                     <li><a href="about.html">Sobre nós</a></li>
                     <li><a href="imoveis.html">Imóveis</a></li>
                     <li><a href="contato.html">Contato</a></li>
                     <li><a href="blog.html">Blog</a></li>
-                    <li><a href="busca_imoveis.html">EDITAR</a></li>
+                    <li><a href="busca_imoveis.html">Editar</a></li>
                 </ul>
+
+                <div class="menu-colunas">
+                    <div class="coluna">
+                        <a href="index.html">Início</a>
+                        <a href="about.html">Sobre nós</a>
+                        <a href="imoveis.html">Imóveis</a>
+                    </div>
+                    <div class="coluna">
+                        <a href="contato.html">Contato</a>
+                        <a href="blog.html">Blog</a>
+                        <a href="busca_imoveis.html">Editar</a>
+                    </div>
+                </div>
+
+
+
+
+
             </nav>
     </header>
     <!-- Seção principal -->
