Atualizei header e nav
Atualização geral.

--- a/busca_imoveis.html
+++ b/busca_imoveis.html
@@ -11,9 +11,14 @@
 <body>
 
     <!-- Cabeçalho do site -->
-    <h1 class="emConstrucao">📍 ATENÇÃO! SITE EM CONSTRUÇÃO.</h1> <!-- APAGAR DEPOIS DE CONCLUÍDO-->
+    <div class="emConstrucao">
+        <h1 >📍 ATENÇÃO! SITE EM DESENVOLVIMENTO.</h1>
+    </div> <!-- APAGAR DEPOIS DE PRONTO-->
     <header>
-        <h1>Buscar Imóveis</h1>
+        <div class="logo_cabecalho">
+            <img src="assets/img/logo_cabecalho.png" alt="">
+           <!-- <h1>Nova Terra Administradora de Imóveis Ltda</h1> -->
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">Início</a></li>
