--- a/imoveis.html
+++ b/imoveis.html
@@ -7,21 +7,37 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1 class="emConstrucao">📍 ATENÇÃO! SITE EM DESENVOLVIMENTO.</h1> <!-- APAGAR DEPOIS DE CONCLUÍDO-->
+    <div class="emConstrucao">
+        <h1 >📍 ATENÇÃO! SITE EM DESENVOLVIMENTO.</h1>
+    </div> <!-- APAGAR DEPOIS DE PRONTO-->
     <header>
-        <div class="logo">
-            <h1>Nova Terra Administradora de Imóveis Ltda</h1>
+        <div class="logo_cabecalho">
+            <img src="assets/img/logo_cabecalho.png" alt="">
+           <!-- <h1>Nova Terra Administradora de Imóveis Ltda</h1> -->
         </div>
         <button class="menu-toggle" id="menu-toggle">&#9776;</button> <!-- Ícone do menu -->
         <nav id="menu">
-            <ul>
+            <ul class="esconder_link_menu">
                 <li><a href="index.html">Início</a></li>
                 <li><a href="about.html">Sobre nós</a></li>
                 <li><a href="imoveis.html">Imóveis</a></li>
                 <li><a href="contato.html">Contato</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="busca_imoveis.html">EDITAR</a></li>
+                <li><a href="busca_imoveis.html">Editar</a></li>
             </ul>
+
+            <div class="menu-colunas">
+                <div class="coluna">
+                    <a href="index.html">Início</a>
+                    <a href="about.html">Sobre nós</a>
+                    <a href="imoveis.html">Imóveis</a>
+                </div>
+                <div class="coluna">
+                    <a href="contato.html">Contato</a>
+                    <a href="blog.html">Blog</a>
+                    <a href="busca_imoveis.html">Editar</a>
+                </div>
+            </div>
         </nav>
     </header>
 
