--- a/blog.html
+++ b/blog.html
@@ -9,9 +9,15 @@
     <link rel="stylesheet" href="css/stilo_post_do-blog.css">
 </head>
 <body>
-    <h1 class="emConstrucao">📍 ATENÇÃO! SITE EM CONSTRUÇÃO.</h1> <!-- APAGAR DEPOIS DE CONCLUÍDO-->
+    <div class="emConstrucao">
+        <h1 >📍 ATENÇÃO! SITE EM DESENVOLVIMENTO.</h1>
+    </div> <!-- APAGAR DEPOIS DE PRONTO-->
     <header>
-        <h1>Blog Imobiliário</h1>
+        <div class="logo_cabecalho">
+            <img src="assets/img/logo_cabecalho.png" alt="">
+           <!-- <h1>Nova Terra Administradora de Imóveis Ltda</h1> -->
+        </div>
+        <button class="menu-toggle" id="menu-toggle">&#9776;</button> <!-- Ícone do menu -->
         <nav>
             <ul>
                 <li><a href="index.html">Início</a></li>
