--- a/services.html
+++ b/services.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1 class="emConstrucao"">📍 ATENÇÃO! SITE EM CONSTRUÇÃO.</h1> <!-- APAGAR DEPOIS DE CONCLUÍDO-->
+    <div class="emConstrucao">
+        <h1 >📍 ATENÇÃO! SITE EM DESENVOLVIMENTO.</h1>
+    </div> <!-- APAGAR DEPOIS DE PRNTO-->
     <header>
         <h1>Nova Terra Administradora de Imóveis</h1>
         <nav>
