--- a/thanks.html
+++ b/thanks.html
@@ -1,4 +1,6 @@
-<h1 class="emConstrucao">📍 ATENÇÃO! SITE EM CONSTRUÇÃO.</h1> <!-- APAGAR DEPOIS DE CONCLUÍDO-->
+<div class="emConstrucao">
+    <h1 >📍 ATENÇÃO! SITE EM DESENVOLVIMENTO.</h1>
+</div> <!-- APAGAR DEPOIS DE PRNTO-->
 
 <h2>Obrigado por entrar em contato! Retornaremos em breve.</h2>
 <a href="index.html">Voltar para o início</a>
