Atualizei HTML e CSS
Atualização geral

--- a/busca_imoveis.html
+++ b/busca_imoveis.html
@@ -12,7 +12,7 @@
 
     <!-- Cabeçalho do site -->
     <div class="emConstrucao">
-        <h1 >📍 ATENÇÃO! SITE EM DESENVOLVIMENTO.</h1>
+        <h1 > ATENÇÃO! SITE EM DESENVOLVIMENTO.</h1>
     </div> <!-- APAGAR DEPOIS DE PRONTO-->
     <header>
         <div class="logo_cabecalho">
