--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <div class="emConstrucao">
-        <h1 >📍 ATENÇÃO! SITE EM DESENVOLVIMENTO.</h1>
+        <h1 > ATENÇÃO! SITE EM DESENVOLVIMENTO.</h1>
     </div> <!-- APAGAR DEPOIS DE PRNTO-->
     <!-- Cabeçalho do site -->
     <header>
