--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="emConstrucao">
-        <h1 >📍 ATENÇÃO! SITE EM DESENVOLVIMENTO.</h1>
+        <h1 > ATENÇÃO! SITE EM DESENVOLVIMENTO.</h1>
     </div> <!-- APAGAR DEPOIS DE PRNTO-->
     <header>
         <h1>Nova Terra Administradora de Imóveis</h1>
