--- a/thanks.html
+++ b/thanks.html
@@ -1,5 +1,5 @@
 <div class="emConstrucao">
-    <h1 >📍 ATENÇÃO! SITE EM DESENVOLVIMENTO.</h1>
+    <h1 > ATENÇÃO! SITE EM DESENVOLVIMENTO.</h1>
 </div> <!-- APAGAR DEPOIS DE PRNTO-->
 
 <h2>Obrigado por entrar em contato! Retornaremos em breve.</h2>
