--- a/pages/imovel1.html
+++ b/pages/imovel1.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="emConstrucao">
-        <h1 >📍 ATENÇÃO! SITE EM DESENVOLVIMENTO.</h1>
+        <h1 > ATENÇÃO! SITE EM DESENVOLVIMENTO.</h1>
     </div> <!-- APAGAR DEPOIS DE PRONTO-->
     <header>
         <h1>Nova Terra Administradora de Imóveis</h1>
