--- a/pages/imovel2.html
+++ b/pages/imovel2.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="emConstrucao">
-        <h1 >📍 ATENÇÃO! SITE EM DESENVOLVIMENTO.</h1>
+        <h1 > ATENÇÃO! SITE EM DESENVOLVIMENTO.</h1>
     </div> <!-- APAGAR DEPOIS DE PRONTO-->
     <header>
         
