Atualizei HTML e CSS
Atualização geral

--- a/contato.html
+++ b/contato.html
@@ -6,6 +6,7 @@
     <title>Contato - Nova Terra</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/estilo_mapa_contato.css">
+
 </head>
 <body>
     <div class="emConstrucao">
@@ -13,7 +14,7 @@
     </div> <!-- APAGAR DEPOIS DE PRONTO-->
     <header>
         <div class="logo_cabecalho">
-            <img src="assets/img/logo_cabecalho.png" alt="">
+            <img src="assets/img/logo_cabecalho.png" alt="logo do Cabeçalho">
            <!-- <h1>Nova Terra Administradora de Imóveis Ltda</h1> -->
         </div>
         <button class="menu-toggle" id="menu-toggle">&#9776;</button> <!-- Ícone do menu -->
@@ -81,6 +82,6 @@
     </footer>
 
     <script src="js/script.js"></script>
-
+    <script src="js/menu.js"></script>
 </body>
 </html>
