--- a/imoveis.html
+++ b/imoveis.html
@@ -43,7 +43,7 @@
 
     <section class="sessao_inicial">
         <h2>Nossos Imóveis</h2>
-        <p>Confira os imóveis disponíveis para venda e locação.</p>
+        <p>Confira os imóveis disponíveis para venda.</p>
 
         <div class="gallery">
             <div class="property">
@@ -91,6 +91,6 @@
     </footer>
 
     <script src="js/script.js"></script>
-
+    <script src="js/menu.js"></script>
 </body>
 </html>
