--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Cabeçalho do site -->
     <header>
             <div class="logo_cabecalho">
-                <img src="assets/img/logo_cabecalho.png" alt="">
+                <img src="assets/img/logo_cabecalho.png" alt="Logo do cabeçalho">
                <!-- <h1>Nova Terra Administradora de Imóveis Ltda</h1> -->
             </div>
             <button class="menu-toggle" id="menu-toggle">&#9776;</button> <!-- Ícone do menu -->
@@ -69,6 +69,29 @@
     </section>
 
     <section> <!--APAGAR-->
+
+        <div class="property-detail">
+            <!--substituir a imagem única pelo carrossel de imagens-->
+            <div class="swiper-container">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img src="assets/img/carrossel1-1.jpg" alt="Foto 1"></div>
+                    <div class="swiper-slide"><img src="assets/img/carrossel1-2.jpg" alt="Foto 2"></div>
+                    <div class="swiper-slide"><img src="assets/img/carrossel1-3.jpg" alt="Foto 3"></div>
+                </div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+            </div>            
+            <!--👆-->
+            <img src="assets/img/imovel1.jpg" alt="Apartamento Luxo">
+            <p><strong>Quartos:</strong> 3</p>
+            <p><strong>Banheiros:</strong> 2</p>
+            <p><strong>Suíte:</strong> 1</p>
+            <p><strong>Varanda Gourmet:</strong> Sim</p>
+            <p><strong>Preço:</strong> R$ 950.000,00</p>
+            <a href="contato.html" class="btn">Entre em Contato</a>
+        </div>
+
         <h3>APAGAR</h3>
         <div><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis vel pariatur explicabo accusamus vero. Eveniet quod veritatis commodi sapiente esse. Veniam eligendi recusandae dolore voluptas repellat. Minus laborum sunt a. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur tempora accusantium odit distinctio. Ab sapiente fugit maxime hic nemo ea nobis corporis repellat commodi adipisci, minima at ipsa dignissimos consectetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus eius quasi similique dolorem quam nostrum aperiam aliquid, temporibus iusto soluta! Fugiat corrupti nesciunt quod quos quo aliquid dicta unde quibusdam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod optio recusandae ipsum nihil ducimus quasi nisi quibusdam? Placeat et provident illum. Totam provident error tempore quaerat cum, ducimus modi eveniet!</p></div>
 
@@ -86,6 +109,8 @@
     
     <script src="js/script.js"></script>
     <script src="js/menu.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+    <script src="../js/carousel.js"></script>
     
 </body>
 </html>
