Criei os botões das redes sociais
Apenas a parte inicial.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
     <link rel="stylesheet" href="css/style.css"> <!-- Link para o arquivo de estilos -->
+    <link rel="stylesheet" href="css/rede_sociais_header.css"> <!--Estilos dos boões das redes sociais-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"> <!-- faz parte do Font Awesome, uma biblioteca de ícones. Se a biblioteca não estiver carregada no seu projeto, os ícones não aparecerão.-->
+
 </head>
 <body>
     <div class="emConstrucao">
@@ -37,6 +40,17 @@
                 <img src="assets/img/logo_cabecalho.png" alt="Logo do cabeçalho">
                <!-- <h1>Nova Terra Administradora de Imóveis Ltda</h1> -->
             </div>
+
+            <!-- 👇BOTÕES DAS REDES SOCIAIS-->
+            <div class="redes-sociais">
+                <a href="https://facebook.com" target="_blank" class="social-btn"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/imobiliaria.novaterra/" target="_blank" class="social-btn"><i class="fab fa-instagram"></i></a>
+                <a href="https://linkedin.com" target="_blank" class="social-btn"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://wa.me/5538992022019" target="_blank" class="social-btn"><img             src="caminho-do-seu-icone-whatsapp.png" alt="WhatsApp" width="40" height="40"></a>
+
+            </div>
+            <!-- 👆 BOTÕES DAS REDES SOCIAIS-->
+
             <button class="menu-toggle" id="menu-toggle">&#9776;</button> <!-- Ícone do menu -->
             <nav id="menu">
                 <ul class="esconder_link_menu">
@@ -46,8 +60,8 @@
                     <li><a href="contato.html">Contato</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="busca_imoveis.html">Editar</a></li>
+                    <li><a href="busca_imoveis.html">Editar</a></li> 
                 </ul>
-
                 <div class="menu-colunas">
                     <div class="coluna">
                         <a href="index.html">Início</a>
