Atualizei os botões das redes sociais
Atualização geral

--- a/index.html
+++ b/index.html
@@ -43,10 +43,13 @@
 
             <!-- 👇BOTÕES DAS REDES SOCIAIS-->
             <div class="redes-sociais">
-                <a href="https://facebook.com" target="_blank" class="social-btn"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://www.instagram.com/imobiliaria.novaterra/" target="_blank" class="social-btn"><i class="fab fa-instagram"></i></a>
-                <a href="https://linkedin.com" target="_blank" class="social-btn"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://wa.me/5538992022019" target="_blank" class="social-btn"><img             src="caminho-do-seu-icone-whatsapp.png" alt="WhatsApp" width="40" height="40"></a>
+                <a href="https://facebook.com" target="_blank" class="social-btn">
+                    <i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/imobiliaria.novaterra/" target="_blank" class="social-btn">
+                    <i class="fab fa-instagram"></i></a>
+                <a href="https://wa.me/5538992022019" target="_blank" class="social-btn"> 
+                    <i class="fab fa-whatsapp"></i>
+                </a>
 
             </div>
             <!-- 👆 BOTÕES DAS REDES SOCIAIS-->
