--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="css/style.css"> <!-- Link para o arquivo de estilos -->
     <link rel="stylesheet" href="css/rede_sociais_header.css"> <!--Estilos dos boões das redes sociais-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"> <!-- faz parte do Font Awesome, uma biblioteca de ícones. Se a biblioteca não estiver carregada no seu projeto, os ícones não aparecerão.-->
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
 </head>
 <body>
     <div class="emConstrucao">
@@ -43,8 +43,6 @@
 
             <!-- 👇BOTÕES DAS REDES SOCIAIS-->
             <div class="redes-sociais">
-                <a href="https://facebook.com" target="_blank" class="social-btn">
-                    <i class="fab fa-facebook-f"></i></a>
                 <a href="https://www.instagram.com/imobiliaria.novaterra/" target="_blank" class="social-btn">
                     <i class="fab fa-instagram"></i></a>
                 <a href="https://wa.me/5538992022019" target="_blank" class="social-btn"> 
@@ -63,7 +61,6 @@
                     <li><a href="contato.html">Contato</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="busca_imoveis.html">Editar</a></li>
-                    <li><a href="busca_imoveis.html">Editar</a></li> 
                 </ul>
                 <div class="menu-colunas">
                     <div class="coluna">
@@ -85,38 +82,66 @@
         <p>Somos especialistas na administração e intermediação de imóveis.</p>
     </section>
 
-    <section> <!--APAGAR-->
-
+    <section>
         <div class="property-detail">
-            <!--substituir a imagem única pelo carrossel de imagens-->
-            <div class="swiper-container">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="assets/img/carrossel1-1.jpg" alt="Foto 1"></div>
-                    <div class="swiper-slide"><img src="assets/img/carrossel1-2.jpg" alt="Foto 2"></div>
-                    <div class="swiper-slide"><img src="assets/img/carrossel1-3.jpg" alt="Foto 3"></div>
-                </div>
-                <div class="swiper-pagination"></div>
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
-            </div>            
-            <!--👆-->
-            <img src="assets/img/imovel1.jpg" alt="Apartamento Luxo">
-            <p><strong>Quartos:</strong> 3</p>
-            <p><strong>Banheiros:</strong> 2</p>
-            <p><strong>Suíte:</strong> 1</p>
-            <p><strong>Varanda Gourmet:</strong> Sim</p>
-            <p><strong>Preço:</strong> R$ 950.000,00</p>
-            <a href="contato.html" class="btn">Entre em Contato</a>
+          <div class="swiper-container">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide"><img src="assets/img/carrossel1-1.jpg" alt="Foto 1"></div>
+              <div class="swiper-slide"><img src="assets/img/carrossel1-2.jpg" alt="Foto 2"></div>
+              <div class="swiper-slide"><img src="assets/img/carrossel1-3.jpg" alt="Foto 3"></div>
+            </div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+          </div>
         </div>
+    </section>
+    <!--👆-->
 
-        <h3>APAGAR</h3>
-        <div><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis vel pariatur explicabo accusamus vero. Eveniet quod veritatis commodi sapiente esse. Veniam eligendi recusandae dolore voluptas repellat. Minus laborum sunt a. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur tempora accusantium odit distinctio. Ab sapiente fugit maxime hic nemo ea nobis corporis repellat commodi adipisci, minima at ipsa dignissimos consectetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus eius quasi similique dolorem quam nostrum aperiam aliquid, temporibus iusto soluta! Fugiat corrupti nesciunt quod quos quo aliquid dicta unde quibusdam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod optio recusandae ipsum nihil ducimus quasi nisi quibusdam? Placeat et provident illum. Totam provident error tempore quaerat cum, ducimus modi eveniet!</p></div>
+    <section>
+        <h2>Nossa Missão</h2>
+        <p>A Nova Terra tem como missão proporcionar aos seus clientes a realização do sonho da propriedade rural ou urbana. Acreditamos que cada lote vendido é mais do que um pedaço de terra; é o início de um novo projeto de vida. Nosso compromisso é garantir segurança, transparência e qualidade em todas as negociações.</p>
+    </section>
 
-        <div><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis vel pariatur explicabo accusamus vero. Eveniet quod veritatis commodi sapiente esse. Veniam eligendi recusandae dolore voluptas repellat. Minus laborum sunt a. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur tempora accusantium odit distinctio. Ab sapiente fugit maxime hic nemo ea nobis corporis repellat commodi adipisci, minima at ipsa dignissimos consectetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus eius quasi similique dolorem quam nostrum aperiam aliquid, temporibus iusto soluta! Fugiat corrupti nesciunt quod quos quo aliquid dicta unde quibusdam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod optio recusandae ipsum nihil ducimus quasi nisi quibusdam? Placeat et provident illum. Totam provident error tempore quaerat cum, ducimus modi eveniet!</p></div>
+    <section>
+        <h2>Nossos Produtos e Serviços</h2>
+        <p>Trabalhamos com uma ampla variedade de <strong>lotes e chácaras</strong>, atendendo diferentes perfis de clientes, desde aqueles que buscam terrenos para investimento até aqueles que desejam um espaço para lazer ou moradia.</p>
 
-        <div><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis vel pariatur explicabo accusamus vero. Eveniet quod veritatis commodi sapiente esse. Veniam eligendi recusandae dolore voluptas repellat. Minus laborum sunt a. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur tempora accusantium odit distinctio. Ab sapiente fugit maxime hic nemo ea nobis corporis repellat commodi adipisci, minima at ipsa dignissimos consectetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus eius quasi similique dolorem quam nostrum aperiam aliquid, temporibus iusto soluta! Fugiat corrupti nesciunt quod quos quo aliquid dicta unde quibusdam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod optio recusandae ipsum nihil ducimus quasi nisi quibusdam? Placeat et provident illum. Totam provident error tempore quaerat cum, ducimus modi eveniet!</p></div>
+        <article>
+            <h3>Lotes Urbanos</h3>
+            <p>Os lotes urbanos oferecidos pela Nova Terra estão situados em áreas bem localizadas, próximas a centros comerciais, escolas e hospitais. São ideais para construção residencial ou comercial, permitindo que o cliente desenvolva seus projetos de forma segura e planejada.</p>
+        </article>
 
-        <div><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis vel pariatur explicabo accusamus vero. Eveniet quod veritatis commodi sapiente esse. Veniam eligendi recusandae dolore voluptas repellat. Minus laborum sunt a. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur tempora accusantium odit distinctio. Ab sapiente fugit maxime hic nemo ea nobis corporis repellat commodi adipisci, minima at ipsa dignissimos consectetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus eius quasi similique dolorem quam nostrum aperiam aliquid, temporibus iusto soluta! Fugiat corrupti nesciunt quod quos quo aliquid dicta unde quibusdam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod optio recusandae ipsum nihil ducimus quasi nisi quibusdam? Placeat et provident illum. Totam provident error tempore quaerat cum, ducimus modi eveniet!</p></div>
+        <article>
+            <h3>Chácaras e Sítios</h3>
+            <p>Para quem busca contato com a natureza e um refúgio longe da correria da cidade, disponibilizamos chácaras e sítios em regiões estratégicas. Com terrenos amplos e fácil acesso, essas propriedades são perfeitas para lazer, agropecuária ou moradia.</p>
+        </article>
+    </section>
+
+    <section>
+        <h2>Diferenciais da Nova Terra</h2>
+        <ul>
+            <li><strong>Atendimento Personalizado:</strong> Nossa equipe acompanha cada cliente em todas as etapas do processo, garantindo suporte desde a escolha do terreno até a finalização da compra.</li>
+            <li><strong>Facilidade de Pagamento:</strong> Oferecemos condições especiais de parcelamento e financiamentos próprios.</li>
+            <li><strong>Transparência e Segurança:</strong> Trabalhamos com documentação regularizada, garantindo negociações seguras.</li>
+            <li><strong>Empreendimentos Planejados:</strong> Nossos projetos seguem padrões modernos de infraestrutura, incluindo pavimentação, energia elétrica, água encanada e áreas comuns para lazer.</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Compromisso com o Futuro</h2>
+        <p>A Nova Terra não apenas comercializa terrenos, mas também investe no desenvolvimento sustentável das regiões onde atua. Nosso compromisso com o meio ambiente e com o crescimento ordenado das cidades reflete-se na escolha de áreas estratégicas para urbanização e na promoção de práticas responsáveis no setor imobiliário.</p>
+    </section>
+
+    <section>
+        <h2>Contato</h2>
+        <p>Para conhecer melhor nossas oportunidades e encontrar o lote ou chácara ideal para você, entre em contato com nossa equipe:</p>
+        <ul>
+            <li><strong>Endereço:</strong> [Inserir endereço da empresa]</li>
+            <li><strong>Telefone:</strong> [Inserir telefone]</li>
+            <li><strong>E-mail:</strong> [Inserir e-mail]</li>
+            <li><strong>Site:</strong> <a href="#" target="_blank">[Inserir site da empresa]</a></li>
+        </ul>
     </section>
 
     <!-- Rodapé -->
@@ -127,7 +152,6 @@
     <script src="js/script.js"></script>
     <script src="js/menu.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-    <script src="../js/carousel.js"></script>
-    
+    <script src="js/carousel.js"></script>
 </body>
 </html>
