--- a/imoveis.html
+++ b/imoveis.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imóveis - Nova Terra</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/rede_sociais_header.css"> <!--Estilos dos boões das redes sociais-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"> <!-- faz parte do Font Awesome, uma biblioteca de ícones. Se a biblioteca não estiver carregada no seu projeto, os ícones não aparecerão.-->
 </head>
 <body>
     <div class="emConstrucao">
@@ -15,6 +17,17 @@
             <img src="assets/img/logo_cabecalho.png" alt="">
            <!-- <h1>Nova Terra Administradora de Imóveis Ltda</h1> -->
         </div>
+ 
+        <!-- 👇BOTÕES DAS REDES SOCIAIS-->
+        <div class="redes-sociais">
+            <a href="https://www.instagram.com/imobiliaria.novaterra/" target="_blank" class="social-btn">
+                <i class="fab fa-instagram"></i></a>
+            <a href="https://wa.me/5538992022019" target="_blank" class="social-btn"> 
+                <i class="fab fa-whatsapp"></i>
+            </a>
+        </div>
+        <!-- 👆 BOTÕES DAS REDES SOCIAIS-->
+
         <button class="menu-toggle" id="menu-toggle">&#9776;</button> <!-- Ícone do menu -->
         <nav id="menu">
             <ul class="esconder_link_menu">
@@ -41,14 +54,14 @@
         </nav>
     </header>
 
-    <section class="sessao_inicial">
+    <section class="sessao_inicial imoveis">
         <h2>Nossos Imóveis</h2>
-        <p>Confira os imóveis disponíveis para venda.</p>
+        <p>Confira nossos empreendimentos.</p>
 
         <div class="gallery">
             <div class="property">
                 <a href="http://tomcat.aws.sistemasivi.com.br:8880/sivi_mapas_incorporacaosolar/principal.jsp?id=5bf214661679b78e08708d3e2054cd7c&funcao=visualizarMapas&loteamento=1" target="_blank">
-                    <img src="assets/img/imovel1.jpg" alt="Apartamento Luxo">
+                    <img src="assets/img/imovel1.jpg" alt="DESCREVER">
                     <h3>Loteamento Nova Brasília</h3>
                     <p>Lotes exemplos, apartir de</p>
                     <span class="price">R$ 90.000,00</span>
@@ -79,6 +92,24 @@
                     <h3>Chacreamento Nova Brasília 1</h3>
                     <p>Chácaras exemplos, apartir de</p>
                     <span class="price">R$ 50.000,00</span>
+                </a>
+            </div>
+
+            <div class="property">
+                <a href="pages/imovel2.html">
+                    <img src="assets/img/imovel2.jpg" alt="Casa Moderna">
+                    <h3>Casa Moderna</h3>
+                    <p>4 quartos, piscina, área de lazer completa.</p>
+                    <span class="price">R$ 1.200.000</span>
+                </a>
+            </div>
+            
+            <div class="property">
+                <a href="pages/imovel3.html">
+                    <img src="assets/img/imovel3.jpg" alt="Sala Comercial">
+                    <h3>Sala Comercial</h3>
+                    <p>Localizada no centro, ideal para escritórios.</p>
+                    <span class="price">R$ 350.000</span>
                 </a>
             </div>
             
